# Chronos

./: .gitignore  1.md  Cargo.toml  Makefile  README.md  deny.toml  issues.md  local-ci.ps1  local-ci.sh
.github/workflows/: ci.yml
resources/: chronos.desktop.in
src/: app.rs  backup.rs  db.rs  export.rs  idle.rs  lib.rs  lock.rs  log_buffer.rs  main.rs  notify.rs  stats.rs  tracker.rs  tray.rs  tree.rs  ui.rs  util.rs
tests/: integration.rs
wiki/: Architecture.md  Home.md  Local-Deployment.md
