[package]
name = "chronos"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.92"

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
tray-icon = "0.24"
resvg = "0.47"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"

[target.'cfg(any(windows, target_os = "macos", target_os = "linux"))'.dependencies]
notify-rust = "4"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 4
strip = true
panic = "abort"
